--- a/Arena_Cinema/DAL/DAL.csproj
+++ b/Arena_Cinema/DAL/DAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmployeeDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlConnectData.cs" />
     <Compile Include="TaiKhoanDAL.cs" />
